[package]
name = "ctr-libc"
version = "0.1.0"
authors = ["Fenrir <fenrirwolf@gmail.com>", "The Rust Project Developers"]
license = "MIT/Apache 2.0"

description = """
A library for types and bindings to native C functions found in newlib
for devkitARM
"""

[features]
default = ["use_std"]
use_std = []
