[package]
name = "std"
version = "0.0.0"
license = "MIT/Apache 2.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[dependencies.alloc_system]
git = "https://github.com/FenrirWolf/alloc_system3ds/"
branch = "new-allocator"

[dependencies.libc]
version = "0.2"
default-features = false

[dependencies.ctru-sys]
path = "../ctru-sys"
