[package]
name = "std"
version = "0.0.0"
license = "MIT/Apache 2.0"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[dependencies.alloc_system]
git = "https://github.com/rust3ds/alloc_system3ds"

[dependencies.ctru-sys]
path = "../ctru-sys"
default-features = false
features = ["stdbuild"]

[features]
citra = []
