[package]
authors = ["Ronald Kinard <furyhunter600@gmail.com>"]
description = "A safe wrapper around smealum's ctrulib."
license = "https://en.wikipedia.org/wiki/Zlib_License"
name = "ctru-rs"
version = "0.7.1"
edition = "2021"
rust-version = "1.64"

[lib]
crate-type = ["rlib"]
name = "ctru"

[dependencies]
cfg-if = "1.0"
ctru-sys = { path = "../ctru-sys", version = "0.4" }
const-zero = "0.1.0"
linker-fix-3ds = { git = "https://github.com/rust3ds/rust-linker-fix-3ds.git" }
pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds.git" }
libc = "0.2.121"
bitflags = "1.0.0"
widestring = "0.2.2"
once_cell = "1.10.0"

[build-dependencies]
toml = "0.5"

[dev-dependencies]
ferris-says = "0.2.1"
futures = "0.3"
time = "0.3.7"
tokio = { version = "1.16", features = ["rt", "time", "sync", "macros"] }
cfg-if = "1.0.0"

[features]
default = ["romfs", "big-stack"]
romfs = []
big-stack = []

# Temporary feature to disable some examples by default,
# until thread support is upstreamed
std-threads = []

[package.metadata.cargo-3ds]
romfs_dir = "examples/romfs"

[[example]]
name = "thread-basic"
required-features = ["std-threads"]

[[example]]
name = "thread-info"
required-features = ["std-threads"]

[[example]]
name = "thread-locals"
required-features = ["std-threads"]

[[example]]
name = "futures-basic"
required-features = ["std-threads"]

[[example]]
name = "futures-tokio"
required-features = ["std-threads"]
