[package]
name = "ctru-rs"
version = "0.7.1"
authors = ["Rust3DS Org", "Ronald Kinard <furyhunter600@gmail.com>"]
description = "A safe wrapper around libctru"
repository = "https://github.com/rust3ds/ctru-rs"
keywords = ["3ds", "libctru"]
categories = ["os", "api-bindings"]
exclude = ["examples"]
license = "Zlib"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["rlib"]
name = "ctru"

[dependencies]
cfg-if = "1.0"
ctru-sys = { path = "../ctru-sys", version = "22.2" }
const-zero = "0.1.0"
shim-3ds = { git = "https://github.com/rust3ds/shim-3ds.git" }
pthread-3ds = { git = "https://github.com/rust3ds/pthread-3ds.git" }
libc = "0.2.121"
bitflags = "2.3.3"
widestring = "0.2.2"

[build-dependencies]
toml = "0.5"

[dev-dependencies]
ferris-says = "0.2.1"
futures = "0.3"
time = "0.3.7"
tokio = { version = "1.16", features = ["rt", "time", "sync", "macros"] }
cfg-if = "1.0.0"
bytemuck = "1.12.3"
lewton = "0.10.2"

[features]
default = ["romfs", "big-stack"]
romfs = []
big-stack = []

# Temporary feature to disable some examples by default,
# until thread support is upstreamed
std-threads = []

[package.metadata.cargo-3ds]
romfs_dir = "examples/romfs"

[package.metadata.docs.rs]
default-target = "armv6k-nintendo-3ds"
cargo-args = ["-Z", "build-std"]

[[example]]
name = "thread-basic"
required-features = ["std-threads"]

[[example]]
name = "thread-info"
required-features = ["std-threads"]

[[example]]
name = "thread-locals"
required-features = ["std-threads"]

[[example]]
name = "futures-basic"
required-features = ["std-threads"]

[[example]]
name = "futures-tokio"
required-features = ["std-threads"]
