[package]
name = "ctru-sys"
version = "0.5.0"
authors = ["Rust3DS Org", "Ronald Kinard <furyhunter600@gmail.com>"]
description = "Raw bindings to libctru"
repository = "https://github.com/rust3ds/ctru-rs"
documentation = "https://rust3ds.github.io/ctru-rs/crates/ctru_sys"
keywords = ["3ds", "libctru"]
categories = ["os", "external-ffi-bindings", "no-std", "hardware-support"]
exclude = ["src/.gitattributes"]
license = "Zlib"
links = "ctru"
edition = "2021"

[features]
default = []

## Enables generating C++/Rust layout comparison tests.
## Downstream users of `ctru-sys` shouldn't need to use this feature.
layout-tests = []

[[test]]
path = "tests/layout_test.rs"
name = "layout"
required-features = ["layout-tests"]

[dependencies]
libc = { version = "0.2.121", default-features = false }

[build-dependencies]
bindgen = { version = "0.69", features = ["experimental"] }
cc = "1.0"
cpp_build = "0.5.9"
doxygen-rs = "0.4.2"
itertools = "0.11.0"
which = "4.4.0"
binding-helpers = { git = "https://github.com/rust3ds/ctru-rs.git", features = ["rustfmt"] }

[dev-dependencies]
shim-3ds = { git = "https://github.com/rust3ds/shim-3ds.git" }
test-runner = { git = "https://github.com/rust3ds/ctru-rs.git" }
cpp = "0.5.9"

[package.metadata.docs.rs]
default-target = "armv6k-nintendo-3ds"
targets = []
cargo-args = ["-Z", "build-std"]
