[package]
name = "ctru-sys"
version = "0.5.0"
authors = ["Rust3DS Org", "Ronald Kinard <furyhunter600@gmail.com>"]
description = "Raw bindings to libctru"
repository = "https://github.com/rust3ds/ctru-rs"
documentation = "https://rust3ds.github.io/ctru-rs/crates/ctru_sys"
keywords = ["3ds", "libctru"]
categories = ["os", "external-ffi-bindings", "no-std", "hardware-support"]
exclude = ["src/.gitattributes"]
license = "Zlib"
links = "ctru"
edition = "2024"

[features]
default = []

## Enables generating C++/Rust layout comparison tests.
## Downstream users of `ctru-sys` shouldn't need to use this feature.
layout-tests = [
    "dep:cpp_build",
    "dep:proc-macro2",
    "dep:quote",
    "dep:regex",
    "dep:rust-format",
]

[[test]]
name = "layout_test"
required-features = ["layout-tests"]

[dependencies]
libc = { workspace = true }

[build-dependencies]
bindgen = { version = "0.72", features = ["experimental"] }
cc = "1.0"
# Use git dependency so we can use https://github.com/mystor/rust-cpp/pull/111
cpp_build = { optional = true, git = "https://github.com/mystor/rust-cpp.git" }
doxygen-rs = "0.4.2"
itertools = "0.14.0"
proc-macro2 = { version = "1.0.81", optional = true }
quote = { version = "1.0.36", optional = true }
regex = { version = "1.10.4", optional = true }
rust-format = { version = "0.3.4", optional = true, features = [
    "token_stream",
] }
which = "8.0.0"

[dev-dependencies]
shim-3ds = { workspace = true }
test-runner = { workspace = true }
cpp = "0.5.9"

[package.metadata.docs.rs]
default-target = "armv6k-nintendo-3ds"
targets = []
cargo-args = ["-Z", "build-std"]
