[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"

[features]
console = []
gdb = []
socket = []

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
libc = { workspace = true }
shim-3ds = { git = "https://github.com/rust3ds/shim-3ds.git" }
